@@ -814,6 +814,8 @@ g_mount_remount_finish
 g_mount_can_eject
 g_mount_eject
 g_mount_eject_finish
+g_mount_guess_content_type
+g_mount_guess_content_type_finish
 <SUBSECTION Standard>
 G_IS_MOUNT
 G_MOUNT
